# HotimartBot

./: .flake8  .gitignore  Pipfile  README.md  hotmart.py  hotmartv2.py  pyproject.toml  requirements.txt
src/hotmart_bot/: __init__.py  __main__.py  user_settings.env
src/hotmart_bot/bot/: hotmart_bot.py
src/hotmart_bot/downloader/: hotmart.py
src/hotmart_bot/models/course/: __init__.py  lesson.py  module.py  video.py
src/hotmart_bot/video_download/: download_manager.py  download_thread.py  video_downloader.py
tests/: test_download.py
