[tool.poetry]
name = "hotmart-bot"
version = "0.1.0"
description = "Hotmart Scraper for videos"
authors = ["Daniel Marchena Parreira <danielmapar@gmail.com>", "Murilo Pupo de Oliveira <murilo.pupo@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
youtube-dl = "^2020.12.2"
pathvalidate = "^2.3.0"
selenium = "3.141.0"
selenium-wire = "2.1.2"
webdriver_manager = "3.2.2"
pycryptodome = "3.9.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
mypy = "^0.790"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hotmart_bot"]

[tool.coverage.report]
show_missing = true

[tool.poetry.scripts]
hotmart-bot = "hotmart_bot.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
